--- a/notifications/templates/notifications/_history.html
+++ b/notifications/templates/notifications/_history.html
@@ -62,6 +62,9 @@
 						</tr>
 					{% endfor %}
 				{% else %}
+					<tr>
+						<td colspan="6" class="text-center">{% trans 'No results found' %}</td>
+					</tr>
 				{% endif %}
 			</tbody>
 		</table>
