Adjusts in notification search

--- a/notifications/templates/notifications/_history.html
+++ b/notifications/templates/notifications/_history.html
@@ -10,7 +10,7 @@
 				<div class="form-group">
 	                <label class="col-md-4 history-control-label control-label">{% trans 'Search' %}:</label>
 	                <div class="col-md-8">
-	                	<input type="text" class="form-control" name="search" placeholder="{% trans 'Search...' %}" />
+	                	<input type="text" class="form-control" name="search" value="{{ searched }}" placeholder="{% trans 'Search...' %}" />
 	                </div>
 	            </div>
 	        </form>
