Adding pendencies page

--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -186,7 +186,7 @@
                             <i class="fa fa-envelope-o" aria-hidden="true"></i>
                         </li>
                         <li class="item action_icon" data-toggle="tooltip" data-placement="right" title="{% trans "Pendencias" %}">
-                            <a href="">
+                            <a href="{% url 'notifications:manage' %}">
                                 <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                                 {% if notifications_count > 0 %}
                                     <span class="badge notify_badge">{% if notifications_count > 99 %} +99 {% else %} {{ notifications_count }} {% endif %}</span>
