--- a/links/templates/links/_form.html
+++ b/links/templates/links/_form.html
@@ -4,6 +4,8 @@
 <form method="post" action="" enctype="multipart/form-data">
 	{% csrf_token %}
 
+	{{form.non_field_errors}}
+
 	{% render_field form.control_subject %}
 
 	<div class="form-group{% if form.has_error %} has-error {% endif %} is-fileinput">
@@ -90,7 +92,7 @@
 	<div class="form-group{% if form.has_error %} has-error {% endif %}">
 		<label for="{{ form.initial_view_date.auto_id }}">{{ form.initial_view_date.label }}</label>
 		
-		{% render_field form.initial_view_date class='form-control datetime-picker'   %}
+		{% render_field form.initial_view_date class='form-control date-picker'   %}
 
 		<span id="helpBlock" class="help-block">{{ form.initial_view.help_text }}</span>
 			
@@ -124,6 +126,50 @@
 					</button>
 				<ul>
 					{% for error in form.initial_view.errors %}
+						<li>{{ error }}</li>
+					{% endfor %}
+				</ul>
+			</div>
+		{% endif %}
+	</div>
+
+	<div class="form-group{% if form.has_error %} has-error {% endif %}">
+		<label for="{{ form.end_view_date.auto_id }}">{{ form.end_view_date.label }}</label>
+		
+		{% render_field form.end_view_date class='form-control date-picker'   %}
+
+		<span id="helpBlock" class="help-block">{{ form.end_view.help_text }}</span>
+			
+		{% if form.end_view_date.errors %}
+			<div class="alert alert-danger alert-dismissible" role="alert">
+					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				<ul>
+					{% for error in form.end_view_date.errors %}
+						<li>{{ error }}</li>
+					{% endfor %}
+				</ul>
+			</div>
+		{% endif %}
+	</div>
+
+	<div class="form-group{% if form.has_error %} has-error {% endif %}">
+		<div class=" checkbox">
+			<label for="{{ form.end_view.auto_id }}">
+				{% render_field form.end_view %} {{ form.end_view.label }}
+			</label>
+		</div>
+
+		<span id="helpBlock" class="help-block">{{ form.end_view.help_text }}</span>
+			
+		{% if form.end_view.errors %}
+			<div class="alert alert-danger alert-dismissible" role="alert">
+					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				<ul>
+					{% for error in form.end_view.errors %}
 						<li>{{ error }}</li>
 					{% endfor %}
 				</ul>
