--- a/notifications/templates/notifications/_view.html
+++ b/notifications/templates/notifications/_view.html
@@ -5,7 +5,7 @@
 		<div class="col-md-12">
 			<div class="panel panel-default">
 				<div class="pendency panel-body">
-					<ul class="breadcrumb">
+					<ul class="breadcrumb pend-card">
 						<li>
 							<a href="">{% trans 'Home' %}</a>
 						</li>
