--- a/links/templates/links/_form.html
+++ b/links/templates/links/_form.html
@@ -4,7 +4,18 @@
 <form method="post" action="" enctype="multipart/form-data">
 	{% csrf_token %}
 
-	{{form.non_field_errors}}
+	{% if form.errors %}
+		<div class="alert alert-danger alert-dismissible" role="alert">
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			</button>
+			<ul>
+			{% for key, message in form.errors.items  %}
+				<li>{{message}}</li>
+			{% endfor %}
+			</ul>
+		</div>
+	{% endif %}
 
 	{% render_field form.control_subject %}
 
@@ -388,6 +399,8 @@
 			</div>
 		{% endif %}
 	</div>
+	
+	
 
 	<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
 		<div class="text-center">
