--- a/amadeus/static/css/themes/green.css
+++ b/amadeus/static/css/themes/green.css
@@ -55,8 +55,24 @@ a, a:focus, a:hover {
     background-color: #015E96 !important;
 }
 
+.category-panel .category-header .category-card-items i {
+    color: #014e7d;
+}
+
+.category-panel .category-header .category-card-items i:hover {
+    color: #ffffff;
+}
+
 .subject-panel > .panel-heading {
     background-color: #0277BD !important;
+}
+
+.subject-panel .category-header .category-card-items i {
+    color: #0267a4;
+}
+
+.subject-panel .category-header .category-card-items i:hover {
+    color: #ffffff;
 }
 
 .group-panel > .panel-heading {
@@ -74,6 +90,14 @@ a, a:focus, a:hover {
 
 .topic-panel > .panel-heading {
     background-color: #1d8fe0 !important;
+}
+
+.topic-panel .category-header .category-card-items i {
+    color: #1772b3;
+}
+
+.topic-panel .category-header .category-card-items i:hover {
+    color: #ffffff;
 }
 
 .topic-panel > .category-panel-content, .topic-panel-invisible > .category-panel-content {
@@ -102,7 +126,7 @@ a, a:focus, a:hover {
 }
 
 .category-header .dropdown-menu i {
-    color: inherit;
+    color: inherit !important;
 }
 
 #create-category {
@@ -390,7 +414,11 @@ a.add-row {
 }
 
 .resource_list .category-card-items i {
-    color: #CCCCCC;
+    color: #e5e5e5;
+}
+
+.resource_list .category-card-items i:hover {
+    color: #7f7f7f;
 }
 
 .resource_list .category-card-items .dropdown-menu i {
