--- a/amadeus/static/css/themes/green.css
+++ b/amadeus/static/css/themes/green.css
@@ -92,11 +92,11 @@ a, a:focus, a:hover {
     background-color: #1d8fe0 !important;
 }
 
-.topic-panel .category-header .category-card-items i {
+.topic-panel .category-header .category-card-items i, .topic-panel-invisible .category-header .category-card-items i {
     color: #1772b3;
 }
 
-.topic-panel .category-header .category-card-items i:hover {
+.topic-panel .category-header .category-card-items i:hover, .topic-panel-invisible .category-header .category-card-items i:hover {
     color: #ffffff;
 }
 
