--- a/topics/templates/topics/list.html
+++ b/topics/templates/topics/list.html
@@ -52,7 +52,7 @@
 						  			<i class="fa fa-angle-right"></i> {% trans 'Add Resource' %}
 							  	</button>
 							  	<ul class="dropdown-menu">
-							    	<li><a href="#"><i class="fa fa-video-camera"></i> {% trans 'Video Embed' %}</a></li>
+							    	<li><a href="{% url 'youtube:create' topic.slug %}"><i class="fa fa-video-camera"></i> {% trans 'Video Embed' %}</a></li>
 							    	<li><a href="#"><i class="fa fa-comments-o"></i> {% trans 'Forum' %}</a></li>
 							    	<li><a href="{% url 'file_links:create' topic.slug %}"><i class="fa fa-file-archive-o"></i> {% trans 'File Link' %}</a></li>
 							    	<li><a href="{% url 'links:create' topic.slug %}" > <i class="fa fa-globe"></i> {% trans "Link to Website" %}</a>
