modified translation messages on links and corrected some english in templates

--- a/subjects/templates/subjects/list_search.html
+++ b/subjects/templates/subjects/list_search.html
@@ -6,7 +6,7 @@
 {% block breadcrumbs %}
 	{% clear_breadcrumbs %}
    	{% breadcrumb 'Home' 'subjects:home' %}
-    {% with "You search for "|add:tags as term  %}
+    {% with "You searched for "|add:tags as term  %}
         {% breadcrumb  term 'subjects:index' %}
     {% endwith %}
    	
