--- a/youtube_video/templates/youtube/window_view.html
+++ b/youtube_video/templates/youtube/window_view.html
@@ -20,6 +20,9 @@
 	</style>
 </head>
 <body>
+	<input type="hidden" id="log_finish_url" value="{% url 'youtube:finish' youtube.slug %}" />
+	<input type="hidden" id="log_url" value="{% url 'youtube:watch' youtube.slug %}" />
+	<input type="hidden" id="log_id" value="" />
   	<iframe src="{{ youtube.url }}?enablejsapi=1" frameborder="0" allowfullscreen id="video"></iframe>
 
   	<script type="text/javascript" src="{% static 'js/ytvideo.js' %}"></script>
